empece todo de 0 aplicando boostrap

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,437 +1,39 @@
-* {
-    margin: 0px;
-    padding: 0px;
-
+*{
+    margin: 0;
+    padding: 0;
 }
 
 
-header {
-    background-color: #0C1446;
-    padding: 0px 0px 0px 0px;
-    height: 150px;
-    margin: 0px 0px;
-}
-
-
-
-
-.textoflotante{
-    height: 300px;
-}
-
-
-
-.mifooty{
-    font-size: 25px;
-    color: #FC883C;
-}
-
-.colorfooter{
-
-    background-color: #0C1446;
-}
-footer{
-    background-color: #0C1446;
-    font-family: 'League Gothic', sans-serif;
-    color: #FC883C;
-}
-
-.estilosfooterpapi{
-    display: flex;
-    justify-content: space-between;
-}
-
-.estilosfooterpapiimgenes{
-flex-wrap: nowrap;
-display: flex;
-justify-content: space-between;
-
-}
-
-
-
-
-
-
-
-
-header nav ul {
-    margin-left: 37%;
-    display: flex;
-    justify-content: flex-start;
-    background-color: #fa892c;
-    list-style-type: none;
-    width: 400px;
-    border-radius: 30%;
-}
-
-
-.border {
-    border: 1px solid red;
-}
-
-.textofundacionalii{
-display: block;
-}
-.textofundacional {
-display: none;
-}
-
-
-
-.colormaq{
-background-color: #E0D613;
-}
-
-
-.descserv{
-    border-radius: 7px;
-    background-color: bisque;
-    border: 1px solid darkslategray;
-    width: 150px;
-    height: 150px;
-    overflow: hidden;
-    margin-right: 15px;
-    ;
-}
-.padreservicios{
-display: flex;
-flex-wrap: nowrap;
-
-}
-.tituloservi{
-    font-size: 25px;
-    text-align: center ;
-    margin-top: 15px;
-}
-.pagetitle{
-    font-size: 37px;
-    color: #d672a9
-    ;
-    font-family:'League Gothic', sans-serif;
-}
-.headtitle{
-    font-size: 27px;
-    color: #d672a9
-    ;
-    font-family:'League Gothic', sans-serif;
-}
-
-
-#supergrid {
-    display: grid;
-    background-color: #d672a9;
-    grid-template-areas: 
-    "tituloserv tituloserv tituloserv"
-    "di dr lt"
-    "larvas larvas df"
-    ;
-
-grid-template-rows: 75px 200px 200px ;
-grid-template-columns: 33.33% 33.33% 33.34%;
-}
-
-.estilosserv{
-    display: flex-column;
-    justify-content: center;
-    align-items: center;
-}
-
-#larvax{
-    width: 80%;
-    padding-right: 10px;
-}
-
-article#tituloserv {
-grid-area: tituloserv;
-height: auto;
-}
-article#di{
-    grid-area: lt;
-}
-article#dr{
-    grid-area: dr;
-}
-article#lt{
-    grid-area: lt;
-}
-article#larvas{
-    grid-area: larvas;
-}
-article#df{
-grid-area: df;
-}
-
-
-
-
-
-
-
-
-
-#wrapper {
-    background-color: rgb(55, 122, 209);
-    display: grid;
-    grid-template-areas:
-        "mititulo mititulo mititulo"
-        "creadora descripciondueña descripciondueña"
-        "misub misub fotorandom"
-        "baudeliere baudeliere fotorandom"
-    ;
-    grid-template-columns: 150px auto 150px;
-    grid-template-rows: 150px 150px auto 100px;
-
-}
-
-section#titulo {
-    display: grid;
-    justify-content: center;
-    grid-area: mititulo;
-    background-color: rgb(55, 122, 209);
-}
-
-section#descripcionDueña {
-    grid-area: descripciondueña;
-    background-color: rgb(55, 122, 209);
-}
-
-section#subtitulo {
-    grid-area: misub;
-    display: flex;
-    left: calc(50%);
-    background-color: rgb(55, 122, 209);
-    font-size: large;
-}
-
-section#descripcionNuestramision {
-    grid-area: baudeliere;
-    background-color: rgb(55, 122, 209);
-}
-
-article#dueña {
-    grid-area: creadora;
-    background-color: rgb(55, 122, 209);
-    width: 100%;
-    height: auto;
-}
-
-article#random {
-    grid-area: fotorandom;
-    background-color: rgb(55, 122, 209);
-    width: 100%;
-    height: auto;
-}
-
------------------------------------------------------------------------------------------------- 
-header nav ul li {
-    display: inline-block;
-    font-size: 20px;
-    list-style-type: lower-latin;
-    font-family: 'League Gothic', sans-serif;;
-    color: #E0D613;
-}
-
-
-body {
-    background-color: #F9F9FB;
-}
-
-
-.parteNuestraEmpresa {
-    background-color: rgb(125, 235, 235);
-}
-
-
-section {
-    background-color: azure;
-    margin: 0%;
-}
-
-
-section div article {
-    text-align: center;
-}
-
-.empresa {
-    display: flex;
-    justify-content: space-between;
-}
-
-
-.row {
-    border: #274472 2px solid;
-}
-
-.papi{
-    display: flex;
-    justify-content: center;
-}
-
-.container{
-display: flex;
-overflow: scroll;
-width: 700px;
-}
-
-.content {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    margin-right: 20px;
-
-}
-
-.textoempresa {
-    text-align: left;
-}
-
-section div h5 {
-    text-align: center;
-    margin-bottom: 0px;
-    font-size: larger;
-    color: #FAD02C;
-    margin-top: 0px;
-}
-
-.papucho{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-}
-
-.containerii {
-    display: flex;
-    width: 100pxpx;
-    height: 300px;
-    flex-wrap: wrap;
-}
-
-
-
-.contentii {
-    border-radius: 7px;
-    background-color: bisque;
-    width: 150px;
-    height: 75px;
-    overflow: hidden;
-    margin-right: 15px;
-    ;
-
-}
-
-
-
-
-
-
-.subtitulos {
-    text-align: left;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: wheat;
-}
-
-
-section div nav ul li {
-    display: inline-block;
-    font-size: 20px;
-    list-style-type: lower-latin;
-    margin-right: 60px;
-}
-
-
-nav ul {
-    text-align: center;
-    width: 600px;;
-    border-radius: 15%;
+ul{
+    display: inline-flex;
 }
 
 li{
-    margin-right: 2.5px;
+    display: inline-block;
+    list-style-type: none;
+margin: 0 20px;
 }
 
-
-h3 {
-    font-size: 20px;
-    color:black;
-    font-family: 'Anek Latin', sans-serif;
-    text-align: center;
-    padding-bottom: 0px;
-}
-
-
-.textoflotante {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0%;
-    position: relative;
-    height: 200px;
-}
-
-.fotodepagprinc{
-    height: 100%;
-    width: 100%;
-}
-.first-txt {
-
-    position: absolute;
+a{
     color: black;
 }
 
-.fotosdeconocenos {
-height: 100px; width: 100px;
+.linksentext{
+    text-decoration: underline;
 }
 
+.headerfooter{
+    background-color: #000C66;
+}
 
-
-@media screen and (min-width: 992px) {
-    .textofundacional{
-        display: block;
-    }
-
-    .textofundacionalii{
-        display: none;
-    }
-
-    .fotosdeconocenos {
-        height: 225px; width: 225px;
-        }
-
-    .first-txt{
-        top: calc(50% - 23px);
-        left: calc(50% - 292.53px);
-    }
-
-    h3{
-        font-size: 40px;
-    }
-
-    .textoflotante {
-        margin: 0%;
-        position: relative;
-        height: 300px;
-    }
-
-    .parteNuestraEmpresa {
-        background-color: rgb(135, 223, 223);
-    }
-
-    section {
-        background-color: rgb(51, 233, 233);
-    }
-
-    header nav ul {
-        justify-content: space-between;
-        background-color: #E0D613;
-    }
-
-    .menudesk{
-        display: flex ;
-        justify-content: right;
-        
-    }
-
-
+.navbarheader{
+    color: aliceblue;
+}
+.sectioncortapag{
+    background-color: #6fb6df;
+    color: black;
+    font-size: 40px;
+    height: 20rem;
+    align-items: center;
 
 }
