avance en entrega final

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -28,7 +28,8 @@
 }
 
 .headerfooter{
-    background-color: #000C66;
+    background-color:  #000C66;
+
 }
 
 legend{
@@ -46,4 +47,8 @@ ul{
 }
 .navbar{
     padding: 0;
+}
+
+.sombrax{
+    line-height: 1.15em;
 }
