--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -49,7 +49,8 @@ div{
     }
     .sombrax{
         color: black;
-        text-shadow: 0.05em 0.05em 0.05em  white
+        text-shadow: 0.05em 0.05em 0.05em  white;
+        line-height: 1.15em;
     }
     &.sectioncertificates{
         background-color: #45c7fa;
